Implemented button-activated video recording and saving

--- a/Video_IMU_Recorder/app/src/main/res/values/strings.xml
+++ b/Video_IMU_Recorder/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Video_IMU_Recorder</string>
+    <string name="record_prompt">Start video and IMU capture</string>
 </resources>
