--- a/Video_IMU_Recorder/baseline/src/main/res/values/strings.xml
+++ b/Video_IMU_Recorder/baseline/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Baseline</string>
+    <string name="method_description">All alignment methods constrain z axis downwards; IMU reading starts upon selection.</string>
+    <string name="align_gravity">Compare phone\'s measured gravity and world\'s gravity (dynamic x and y axes)</string>
+    <string name="align_quaternion">Estimate orientation change from gyroscope and accelerometer (constrained x and y axes)</string>
 </resources>
